--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <div class="wrap-cart">
       <div class="menu-ul">
         <ul>
-          <li class="li-menu"><a href="#">меню 1</a></li>
-          <li class="li-menu"><a href="#">меню 2</a></li>
-          <li class="li-menu"><a href="#">Меню 3</a></li>
-          <li class="li-menu"><a href="#">Меню 4</a></li>
+          <li class="li-menu"><a href="#">Главная</a></li>
+          <li class="li-menu"><a href="#">Услуги</a></li>
+          <li class="li-menu"><a href="#">Цены</a></li>
+          <li class="li-menu"><a href="#">Контакты</a></li>
         </ul>
       </div>
       <div class="button-cart">
@@ -29,10 +29,10 @@
   </header>
   <main>
     <div class="goods-list"></div>
-    
   </main>
 
   <script src="script.js"></script>
+  <script src="lesson2.js"></script>
 </body>
 
 </html>
